# cub3d

./: .gdbinit  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  Zou_bisou_bisou.txt  compile_flags.txt
include/: cub3d.h  fsm.h  mlx.h  mlx_int.h  mymlx.h  mymlx_int.h
include/ft/: ft_list.h
maps/: logo_test.cub  los_test.cub  test.cub  test1.cub  test2.cub  test3.cub  test4.cub  test5.cub
maps/multi/: lvla.cub  lvlb.cub  start.cub  start2.cub
resources/textures/: Makefile.mk  arm_cannon_big.xpm  crawler4.xpm  crawler6.xpm  credits.xpm  dmg1.xpm  dmg5.xpm  dmg7.xpm  energy.xpm  energy_0.xpm  energy_1.xpm  energy_6.xpm  energy_8.xpm  energy_9.xpm  energy_bu_empty.xpm  etank1.xpm  explode4.xpm  explode_mid0.xpm  explode_mid3.xpm  explode_miss3.xpm  explode_miss_big2.xpm  explode_miss_big3.xpm  explode_miss_big4.xpm  floor4.xpm  holtz1.xpm  metroid1.xpm  metroid2.xpm  metroid_door.xpm  metroid_door2.xpm  metroid_door3.xpm  metroid_door_missile.xpm  metroid_door_super_anim3.xpm  missile2.xpm  missile3.xpm  missile4.xpm  missile7.xpm  missile_ammo0.xpm  missile_ammo1.xpm  mountain.xpm  phantoon1.xpm  (+26 more)
resources/textures/atomic/: atomic5.xpm
resources/textures/crawler/: crawler5.xpm
resources/textures/holtz/: holtz0.xpm
resources/textures/metroid_door/: metroid_door_anim4.xpm
resources/textures/metroid_door_boss/: metroid_door_boss.xpm  metroid_door_boss_anim5.xpm  metroid_door_open.xpm
resources/textures/metroid_door_missile/: metroid_door_missile_anim1.xpm  metroid_door_missile_anim5.xpm  metroid_door_open.xpm
resources/textures/mmap/: MAP0000.xpm  MAP0001.xpm  MAP0011.xpm  MAP0101.xpm  MAP0110.xpm  MAP1000.xpm  MAP1010.xpm  MAP1011.xpm  MAP1101.xpm  MAP1110.xpm  MAP1111.xpm
resources/textures/reo/: reo_0.xpm
src/: main.c
src/anim/: Makefile.mk  animations.c  map_anims.c
src/anim/load_tex/: free_shtex.c  load_door_tex.c  load_enemy_tex.c  load_explode_tex.c  load_hud_tex.c  load_pickup_tex.c  load_proj_tex.c  load_textures.c
src/animations/: Makefile.mk  animations.c  map_anims.c
src/animations/load_tex/: free_shtex.c  load_door_tex.c  load_enemy_tex.c  load_explode_tex.c  load_hud_tex.c  load_pickup_tex.c  load_proj_tex.c  load_textures.c
src/app/: Makefile.mk  cleanup.c  fsm.c  hooks.c  on_expose.c
src/audio/: Makefile.mk  free_shsnd.c  init_audio.c  load_sounds.c
src/entities/: Makefile.mk  atomic.c  enemies.c  enemy_construction.c  enemy_projectile.c  holtz.c  items.c  logo.c  movement.c  obj_utils.c  phantoon.c  projectile.c  reo.c  triggers.c  update_objects.c  zoomer.c
src/fonts/: Makefile.mk  draw_text.c  free_fonts.c  init_fonts.c
src/parser/: Makefile.mk  init.c  map_collection.c  map_validation.c  parse_colours.c  parser.c  parser.h  test.c  test.cub  utils.c
src/player/: Makefile.mk  health.c  init.c  interaction.c  offsets.c  player.c  pool.c  rays.c  rays_alt.c  settings.c  weapons.c
src/rays/: Makefile.mk  dda_init.c  object_collision.c  pool.c  ray_dda.c  ray_utils.c  rays.c
src/render/: Makefile.mk  ceiling.c  colour.c  credits.c  draw.c  draw_rays.c  floor.c  hud.c  menus.c  minimap.c  mmap_render.c  render.c  render_frame.c  sky.c
src/utils/: Makefile.mk  blend_4pixels_asm.c  check_endianness.c  place_tile_on_image32_alpha.c  strlcpy_is_not_posix.c  time.c  vector.c
textures/: .metroid_door3.xpm-autosave.kra  Makefile.mk  arm_cannon_big.xpm  arm_cannon_big_firing.xpm  atomic0.xpm  atomic1.xpm  atomic2.xpm  atomic3.xpm  atomic4.xpm  atomic5.xpm  boss_bar_left.xpm  boss_bar_right.xpm  cloud.xpm  crawler1.xpm  crawler2.xpm  crawler3.xpm  crawler4.xpm  crawler5.xpm  crawler6.xpm  credits.xpm  credits_lorem.xpm  dmg0.xpm  dmg1.xpm  dmg2.xpm  dmg3.xpm  dmg4.xpm  dmg5.xpm  dmg6.xpm  dmg7.xpm  empty.xpm  energy.xpm  energy_0.xpm  energy_1.xpm  energy_2.xpm  energy_3.xpm  energy_4.xpm  energy_5.xpm  energy_6.xpm  energy_7.xpm  energy_8.xpm  (+158 more)
textures/mmap/: MAP0000.xpm  MAP00000.xpm  MAP00001.xpm  MAP0001.xpm  MAP00010.xpm  MAP00011.xpm  MAP0010.xpm  MAP00100.xpm  MAP00101.xpm  MAP0011.xpm  MAP00110.xpm  MAP00111.xpm  MAP0100.xpm  MAP01000.xpm  MAP01001.xpm  MAP0101.xpm  MAP01010.xpm  MAP01011.xpm  MAP0110.xpm  MAP01100.xpm  MAP01101.xpm  MAP0111.xpm  MAP01110.xpm  MAP01111.xpm  MAP1000.xpm  MAP10000.xpm  MAP1001.xpm  MAP1010.xpm  MAP1011.xpm  MAP1100.xpm  MAP1101.xpm  MAP1110.xpm  MAP1111.xpm  MAPPLAYER.xpm
